--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 API_KEY=208ca80d1e219453796a7f9792d16776
 GATSBY_SITE_ASSETS_URL=http://image.tmdb.org/t/p/w185
+GATSBY_SITE_ASSETS_ORIGINAL_URL=http://image.tmdb.org/t/p/original
